--- a/backend-fastapi/requirements.txt
+++ b/backend-fastapi/requirements.txt
@@ -6,3 +6,9 @@ sqlalchemy>=2.0.0
 asyncpg>=0.29.0
 alembic>=1.12.0
 python-dotenv>=1.0.0
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-anthropic>=0.1.0
+langchain-google-genai>=1.0.0
+langchain-ollama>=0.1.0
+langchain-core>=0.1.0
