Add initial project setup with Docker, environment configuration, and database migration scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-backend-fastapi/app/scripts/init_db.py
-backend-fastapi/app/scripts/seed_data.py
-backend-fastapi/app/scripts/migrate_providers.py
+postgres_data/
+.env
+__pycache__/
+node_modules/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.vscode/
+.idea/
+*.log
